test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_6.k
schema DataMixin:
    name: str

schema Data(DataMixin):
    name: str
